# ctnos

./: .gitmodules  CMakeLists.txt
glad/include/glad/: gl.h
res/: boot_message.txt
src/: game.cpp  game.hpp  main.cpp
src/common/: circle.cpp  circle.hpp  rect.cpp  rect.hpp  shape.hpp
src/graphics/: nanovg.cpp  nanovg.hpp
src/states/: boot_state.cpp  boot_state.hpp  desktop_state.cpp  desktop_state.hpp  state.cpp  state.hpp
src/window/: desktop_window.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/windows/: app_window.cpp  app_window.hpp  calc_window.cpp  calc_window.hpp  desktop_window.cpp  desktop_window.hpp  input.cpp  input.hpp  taskbar_window.hpp  widget_data.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
